fixed mobile view horizontal scroll

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -19,6 +19,7 @@ body {
 
     header{
         height: 320px;
+        overflow: hidden;
         .grass_block, .sky_block{
             width: 100%;
         }
